# datapipe-examples

./: .gitignore  README.md
easy_example__batch_transform/: RUN_ME.py  app.py  catalog__sqls.py  pyproject.toml
openai_inference/: .gitignore  app.py  db.sqlite  input.xlsx  prompt.xlsx  pyproject.toml  readme.md
