[tool.poetry]
name = "openai-inference"
version = "0.1.0"
description = ""
authors = ["Olga Tatarinova <olga@epoch8.co>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
datapipe-core = [
    {version="^0.13.10", extras=["excel", "sqlite"], platform="linux"},
    {version="^0.13.10", extras=["excel"], platform="darwin"},
    {version="^0.13.10", extras=["excel"], platform="win32"},
]
openai = "^1.9.0"
datapipe-app = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
